<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:title="@string/history_title"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarHistory"
        app:layout_constraintBottom_toTopOf="@id/bottomBarHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_history" />

    <TextView
        android:id="@+id/textEmptyHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_empty"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/recyclerHistory"
        app:layout_constraintBottom_toBottomOf="@id/recyclerHistory"
        app:layout_constraintStart_toStartOf="@id/recyclerHistory"
        app:layout_constraintEnd_toEndOf="@id/recyclerHistory" />

    <ProgressBar
        android:id="@+id/progressHistory"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/recyclerHistory"
        app:layout_constraintBottom_toBottomOf="@id/recyclerHistory"
        app:layout_constraintStart_toStartOf="@id/recyclerHistory"
        app:layout_constraintEnd_toEndOf="@id/recyclerHistory" />

    <LinearLayout
        android:id="@+id/bottomBarHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/button_back" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRetryHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_retry_history" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
